add obada standard

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -243,6 +243,12 @@
                     {% endif %}
                   </li>
                   <li>
+                    <a href="javascript:export_file('obada_standard')" class="dropdown-item">
+                      <i class="bi bi-file-spreadsheet"></i>
+                      Obada Standard Spreadsheet
+                    </a>
+                  </li>
+                  <li>
                     <a href="javascript:export_file('certificates')" class="dropdown-item">
                       <i class="bi bi-eraser-fill"></i>
                       Erasure Certificate
