--- a/ereuse_devicehub/templates/inventory/erasure_list.html
+++ b/ereuse_devicehub/templates/inventory/erasure_list.html
@@ -21,33 +21,51 @@
           <ul class="nav nav-tabs nav-tabs-bordered">
 
             <li class="nav-item">
-              <button class="nav-link" data-bs-toggle="tab" data-bs-target="#details">General details</button>
+              <a href="{{ url_for('inventory.device_erasure_list') }}" class="nav-link{% if not orphans %} active{% endif %}">
+                All hard drivers
+              </a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="{{ device.public_link }}" target="_blank">Web</a>
-            </li>
-
-            <li class="nav-item">
-              <button class="nav-link" data-bs-toggle="tab" data-bs-target="#lots">Lots</button>
-            </li>
-
-            <li class="nav-item">
-              <button class="nav-link" data-bs-toggle="tab" data-bs-target="#status">Status</button>
-            </li>
-
-            <li class="nav-item">
-              <button class="nav-link" data-bs-toggle="tab" data-bs-target="#traceability">Traceability log</button>
-            </li>
-
-            <li class="nav-item">
-              <button class="nav-link" data-bs-toggle="tab" data-bs-target="#components">Components</button>
+              <a href="{{ url_for('inventory.device_erasure_list_orphans', orphans=1) }}" class="nav-link{% if orphans %} active{% endif %}">
+                Hard drives without device
+              </a>
             </li>
 
           </ul>
           <div class="tab-content pt-2">
             <div id="devices-list" class="tab-pane fade devices-list active show">
               <label class="btn btn-primary " for="SelectAllBTN"><input type="checkbox" id="SelectAllBTN" autocomplete="off"></label>
+              {% if orphans %}
+              <div class="btn-group dropdown ml-1">
+                <button id="btnLots" type="button" onclick="processSelectedDevices()" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                  <i class="bi bi-folder2"></i>
+                  Lots
+                  <span class="caret"></span>
+                </button>
+                <span class="d-none" id="activeTradeModal" data-bs-toggle="modal" data-bs-target="#tradeLotModal"></span>
+
+                <ul class="dropdown-menu" aria-labelledby="btnLots" id="dropDownLotsSelector">
+                  <div class="row w-100">
+                    <div class="input-group mb-3 mx-2">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
+                      </div>
+                      <input type="text" class="form-control" id="lots-search" placeholder="search" aria-label="search" aria-describedby="basic-addon1">
+                    </div>
+                  </div>
+                  <h6 class="dropdown-header">Select lots where to store the selected devices</h6>
+                  <ul class="mx-3" id="LotsSelector"></ul>
+                  <li><hr /></li>
+                  <li>
+                    <a href="#" class="dropdown-item" id="ApplyDeviceLots">
+                      <i class="bi bi-check"></i>
+                      Apply
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              {% endif %}
               <div class="btn-group dropdown m-1" uib-dropdown="">
                 <button id="btnExport" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="bi bi-reply"></i>
@@ -69,6 +87,27 @@
                   </li>
                 </ul>
               </div>
+              {% if orphans %}
+              <div class="btn-group dropdown m-1" uib-dropdown="">
+                <button id="btnTags" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="bi bi-tag"></i>
+                    Labels
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="btnTags">
+                  <li>
+                    <form id="print_labels" method="post" action="{{ url_for('labels.print_labels') }}">
+                      {% for f in form_print_labels %}
+                        {{ f }}
+                      {% endfor %}
+                      <a href="javascript:$('#print_labels').submit()" class="dropdown-item">
+                        <i class="bi bi-printer"></i>
+                        Print labels
+                      </a>
+                    </form>
+                  </li>
+                </ul>
+              </div>
+              {% endif %}
 
               <div class="tab-content pt-2">
                 <table class="table">
