--- a/ereuse_devicehub/templates/inventory/placeholder_log_list.html
+++ b/ereuse_devicehub/templates/inventory/placeholder_log_list.html
@@ -22,6 +22,38 @@
           <div class="tab-content pt-5">
             <div id="devices-list" class="tab-pane fade devices-list active show">
               <div class="tab-content pt-2">
+                <div class="dataTable-top" style="float: left;">
+                  <div class="dataTable-dropdown">
+                    <label>
+                      <select class="dataTable-selector">
+                        <option value="5"{% if placeholders_log.per_page == 5 %} selected="selected"{% endif %}>
+                          5
+                        </option>
+                        <option value="10"{% if placeholders_log.per_page == 10 %} selected="selected"{% endif %}>
+                          10
+                        </option>
+                        <option value="15"{% if placeholders_log.per_page == 15 %} selected="selected"{% endif %}>
+                          15
+                        </option>
+                        <option value="20"{% if placeholders_log.per_page == 20 %} selected="selected"{% endif %}>
+                          20
+                        </option>
+                        <option value="25"{% if placeholders_log.per_page == 25 %} selected="selected"{% endif %}>
+                          25
+                        </option>
+                        <option value="50"{% if placeholders_log.per_page == 50 %} selected="selected"{% endif %}>
+                          50
+                        </option>
+                        <option value="100"{% if placeholders_log.per_page == 100 %} selected="selected"{% endif %}>
+                          100
+                        </option>
+                      </select> entries per page
+                    </label>
+                  </div>
+                  <div class="dataTable-search">
+                  </div>
+                </div>
+                <div class="dataTable-container">
                 <table class="table">
                   <thead>
                     <tr>
@@ -34,7 +66,7 @@
                     </tr>
                   </thead>
                   <tbody>
-                    {% for log in placeholders_log %}
+                    {% for log in placeholders_log.items %}
                     <tr>
                       <td>
                           {{ log.phid }}
@@ -58,6 +90,38 @@
                     {% endfor %}
                   </tbody>
                 </table>
+                <div class="dataTable-bottom">
+                  <div class="dataTable-info">
+                    Showing {{ placeholders_log.first }} to {{ placeholders_log.last }} of {{ placeholders_log.total }} entries
+                  </div>
+                  <nav class="dataTable-pagination">
+                    <ul class="dataTable-pagination-list">
+                      {% if placeholders_log.has_prev %}
+                        <li class="pager">
+                            <a href="{{ url_for('inventory.placeholder_logs', page=placeholders_log.prev_num, per_page=placeholders_log.per_page) }}">‹</a>
+                        </li>
+                      {% endif %}
+                      {% for page in placeholders_log.iter_pages() %}
+                        {% if page %}
+                          {% if page == placeholders_log.page %}
+                            <li class="active"><a href="javascript:void()">{{ page }}</a></li>
+                          {% else %}
+                            <li class="">
+                              <a href="{{ url_for('inventory.placeholder_logs', page=page, per_page=placeholders_log.per_page) }}">
+                                {{ page }}
+                              </a>
+                            </li>
+                          {% endif %}
+                        {% endif %}
+                      {% endfor %}
+                      {% if placeholders_log.has_next %}
+                        <li class="pager">
+                          <a href="{{ url_for('inventory.placeholder_logs', page=placeholders_log.next_num, per_page=placeholders_log.per_page) }}">›</a>
+                        </li>
+                      {% endif %}
+                    </ul>
+                  </nav>
+                </div>
 
                 </div>
               </div>
@@ -75,6 +139,18 @@
 
 <!-- Custom Code -->
 <script>
-  const table = new simpleDatatables.DataTable("table")
+  $(document).ready(() => {
+    $(".dataTable-selector").on("change", function() {
+        const per_page = $('.dataTable-selector').val();
+        window.location.href = "{{ url_for('inventory.placeholder_logs', page=1) }}&per_page="+per_page;
+    });
+  });
+</script>
+<script>
+  let table = new simpleDatatables.DataTable("table", {
+    footer: false,
+    paging: false,
+    
+  })
 </script>
 {% endblock main %}
