fix bug Title tag in erasure list

--- a/ereuse_devicehub/templates/inventory/erasure_list.html
+++ b/ereuse_devicehub/templates/inventory/erasure_list.html
@@ -22,7 +22,7 @@
 
             <li class="nav-item">
               <a href="{{ url_for('inventory.device_erasure_list') }}" class="nav-link{% if not orphans %} active{% endif %}">
-                All hard drivers
+                All hard drives
               </a>
             </li>
 
