--- a/ereuse_devicehub/templates/ereuse_devicehub/base.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base.html
@@ -19,7 +19,7 @@
 
   <!-- JS Files -->
   <script src="{{ url_for('static', filename='js/jquery-3.6.0.min.js') }}"></script>
-  <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest"></script>
+  <script src="{{ url_for('static', filename='js/simple-datatables.js') }}"></script>
 
   <!-- Vendor CSS Files -->
   <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
