--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -8,26 +8,10 @@
   </div><!-- End Logo -->
 
   <div class="search-bar">
-    <form class="search-form d-flex align-items-center" method="" id="SearchForm" action="#">
-      <input class="dropdown-toggle" type="text" name="query" placeholder="Search" title="Enter search keyword"
+    <form class="search-form d-flex align-items-center" method="" id="SearchFormAdvance" action="/inventory/search/">
+      <input class="dropdown-toggle" type="text" name="q" placeholder="Search" title="Enter search keyword"
         autocomplete="off" id="dropdownSearch" data-bs-toggle="dropdown" aria-expanded="false">
       <button type="submit" title="Search"><i class="bi bi-search"></i></button>
-
-      <ul class="dropdown-menu" autoClose="outside" aria-labelledby="dropdownSearch" id="dropdown-search-list"
-        style="min-width: 100px;">
-        <li class="dropdown-header">
-          <h6 class="dropdown-header">You can search:</h6>
-        </li>
-        <li class="dropdown-item"><i class="bi bi-laptop"></i> Devices <span class="badge bg-secondary"
-            style="float: right;">DHID</span></li>
-        <li class="dropdown-item"><i class="bi bi-folder2"></i> lots <span class="badge bg-secondary"
-            style="float: right;">Name</span></li>
-        <li class="dropdown-item">
-          <small class="text-muted">
-            <a href="{{ url_for('inventory.advanced_search')}}">Advanced Search</a>
-          </small>
-        </li>
-      </ul>
     </form>
   </div><!-- End Search Bar -->
 
