--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -8,10 +8,17 @@
   </div><!-- End Logo -->
 
   <div class="search-bar">
-    <form class="search-form d-flex align-items-center" method="" id="SearchFormAdvance" action="/inventory/search/">
-      <input class="dropdown-toggle" type="text" name="q" placeholder="Search" title="Enter search keyword"
+    <form class="search-form d-flex align-items-center" method="get" action="/inventory/search/">
+      <input class="" type="text" name="q" placeholder="Search" title="Enter search keyword">
+      <button type="submit" title="Search"><i class="bi bi-search"></i></button>
+    </form>
+  </div><!-- End Search Bar -->
+  <div class="search-bar d-none">
+    <form class="search-form d-flex align-items-center" method="" id="SearchForm" action="#">
+      <input class="dropdown-toggle" type="text" name="query" placeholder="Search" title="Enter search keyword"
         autocomplete="off" id="dropdownSearch" data-bs-toggle="dropdown" aria-expanded="false">
       <button type="submit" title="Search"><i class="bi bi-search"></i></button>
+
       <ul class="dropdown-menu" autoClose="outside" aria-labelledby="dropdownSearch" id="dropdown-search-list"
         style="min-width: 100px;">
         <li class="dropdown-header">
